--- a/etiqafe/src/styles/globals.css
+++ b/etiqafe/src/styles/globals.css
@@ -66,18 +66,12 @@
     }
   }
 
-  @layer base {
-    * {
-      @apply border-border;
-    }
-    body {
-      @apply bg-background text-foreground;
-    }
-  }
+  
+  
 
   
  main {
-  @apply max-w-6xl mx-auto my-12;
+  @apply max-w-6xl mx-auto my-12 min-h-[5rem];
 }
 p {
   @apply mt-2;
@@ -87,4 +81,5 @@ h1 {
 }
 h2 {
   @apply scroll-m-20 border-b pb-2 text-3xl font-semibold tracking-tight transition-colors first:mt-0;
-} 
+}
+
