--- a/etiqafe/src/styles/globals.css
+++ b/etiqafe/src/styles/globals.css
@@ -68,10 +68,13 @@
 
   
   
-
+  body {
+    font-family: 'Roboto', sans-serif;
+  }
   
  main {
   @apply max-w-6xl mx-auto my-12 min-h-[5rem];
+  font-family: 'Roboto', sans-serif;
 }
 p {
   @apply mt-2;
